// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly with disabled 1`] = `
<div
  aria-disabled={true}
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small disabled"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  aria-disabled={false}
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected 1`] = `
<div
  aria-disabled={false}
  aria-selected={true}
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small selected"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected and disabled 1`] = `
<div
  aria-disabled={true}
  aria-selected={true}
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small disabled"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with size 1`] = `
<div
  aria-disabled={false}
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem large"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;
